@@ -1,5 +1,12 @@
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
+	* sequence.d (seq_check_index): Remove typdescr argument. Use index,
+	not STACK_0. Fix fehler_index_range argument. Add documentation.
+	(ELT): Update.
+	(SYSTEM::%SETELT): Update.
+
+2001-08-05  Bruno Haible  <haible@clisp.cons.org>
+
 	* pathname.d (legal_namechar): Treat ' ' as valid and '"' as invalid.
 
 2001-08-14  Sam Steingold  <sds@gnu.org>
